.provarCaches/00D410000011HE0EAM/objects/asp04__Service_Handlers__mdt.object
<CustomObject>
    <fields>
        <fullName>asp04__Handler_Name__c</fullName>
        <description>The name of the class which should handle the service requests</description>
        <inlineHelpText>The name of the class which should handle the service requests</inlineHelpText>
        <label>Handler Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asp04__Handler_NamespacePrefix__c</fullName>
        <inlineHelpText>The Namespace Prefix that applies to the actual handler class. Leave this blank to indicate that none applies.</inlineHelpText>
        <label>Handler Namespace Prefix</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asp04__Interface_Name__c</fullName>
        <description>The name of the interface which is implemented in order to handle this service request</description>
        <inlineHelpText>The name of the interface which is implemented in order to handle this service request</inlineHelpText>
        <label>Interface Name</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Service Handler</label>
    <pluralLabel>Service Handlers</pluralLabel>
</CustomObject>